# server/internal/app/hint.go
@@ -10,20 +10,15 @@ type HintRepository interface {
 }
 
 type Hint struct {
-	ID        int       `json:"id"`
-	Title     string    `json:"title"`
-	Body      string    `json:"body"`
-	Type      string    `json:"type"`
-	CreatedAt string    `json:"created_at"`
-	Reactions int       `json:"reactions"`
-	Comments  []Comment `json:"comments"`
-	Author    Author    `json:"author"`
-	URL       string    `json:"hint_url"`
-}
-
-type Comment struct {
-	Body   string `json:"body"`
-	Author Author `json:"author"`
+	ID        int    `json:"id"`
+	Title     string `json:"title"`
+	Body      string `json:"body"`
+	Type      string `json:"type"`
+	CreatedAt string `json:"created_at"`
+	Reactions int    `json:"reactions"`
+	Comments  int    `json:"comments"`
+	Author    Author `json:"author"`
+	URL       string `json:"hint_url"`
 }
 
 type Author struct {
